# dumux_hommel2019a

./: CMakeLists.txt  README.md  dune.module  hommel2019a.pc.in  installHommel2019a.sh
appl/: CMakeLists.txt
appl/icp/: CMakeLists.txt  co2tableslaboratoryhightemp.hh  co2valueslaboratoryhightemp.inc  icpspatialparams.hh
appl/icp/eicp/: CMakeLists.txt  eicp_column2.input  leo.cc  leo_column1.input  leocolumnproblem.hh
dumux/: CMakeLists.txt
dumux/material/: CMakeLists.txt
dumux/material/chemistry/: CMakeLists.txt
dumux/material/chemistry/biogeochemistry/: CMakeLists.txt  enzymecarbonicacid.hh  leocarbonicacid.hh
dumux/material/components/: ammonia.hh  ammoniumion.hh  bicarbonateion.hh  chlorideion.hh  ferrohydrite.hh  hydronion.hh  hydroxideion.hh  iron2ion.hh  iron3ion.hh  sodiumion.hh  urea.hh  urease.hh
dumux/material/fluidmatrixinteractions/: CMakeLists.txt  permeabilityvermapruess.hh
dumux/material/fluidstates/: CMakeLists.txt  compositionalsecondarycomponent.hh
dumux/material/fluidsystems/: CMakeLists.txt  icpcomplexsalinitybrine.hh  leomin.hh
dumux/material/solidsystems/: CMakeLists.txt  leominsolids.hh
dumux/porousmediumflow/: CMakeLists.txt
dumux/porousmediumflow/2picp/: CMakeLists.txt  iofields.hh  model.hh  volumevariables.hh
